# VHDL-sim-runner

./: .gitignore  README.md  pyproject.toml
src/vhdl_sim/: generator.py  main.py  scanner.py  ui.py
