[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vhdl-sim"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["questionary"]

[project.scripts]
vhdl-sim = "vhdl_sim.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vhdl_sim*"]
exclude = [".venv*", "*.egg-info*"]
